# restaurante-codex

./: .gitignore  README.md  demo.py  demo_sim.py  demo_tui.py  pyproject.toml
.specs/features/restaurante-codex/: validation.md
.specs/features/simulacao-sims/: spec.md  validation-fase1.md  validation-fase2.md  validation-fase3.md  validation-fase4-5.md
config/: cardapio.json  cenario.json  elenco.json  tema.json
docs/: 00-mapa.md  01-camadas-e-dependencias.md  02-ports-e-adapters.md  03-estado-ilegal-e-fail-fast.md  04-mecanismo-e-politica.md  05-assincronicidade.md  07-simulacao-sims.md  08-config-pydantic.md
src/restaurante/: __init__.py  app.py
src/restaurante/adaptadores/: __init__.py  apresentador_coletor.py  apresentador_rich.py  apresentador_textual.py  elenco.py  narracao.py  notificador_console.py  pagamento_fake.py  precos.py  relogio_fake.py  relogio_real.py  repositorio_memoria.py  situacoes_sims.py
src/restaurante/config/: __init__.py  carregador.py  catalogo.py  modelos.py
src/restaurante/dominio/: __init__.py  beats.py  cardapio.py  dinheiro.py  erros.py  pedido.py  pessoas.py  times.py
src/restaurante/portas/: __init__.py  apresentador.py  notificacao.py  pagamento.py  precificacao.py  relogio.py  repositorio.py  situacoes.py
src/restaurante/servicos/: __init__.py  balcao.py  conta.py  cozinha.py  modelo_tempo.py  motor.py
tests/: test_config.py  test_cozinha_async.py  test_demos.py  test_dominio.py  test_e2e.py  test_precificacao.py  test_sim_motor.py  test_sim_nucleo.py  test_sim_rich.py  test_sim_tui.py
